build/log/idf_py_stderr_output_21067
Command: make -j 18 all
In file included from /mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/wifi_manager.c:1:
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/wifi_manager.h:6:64: error: unknown type name 'wifi_auth_mode_t'
    6 | void wifi_manager_init(const char *ssid, const char *password, wifi_auth_mode_t authmode);
      |                                                                ^~~~~~~~~~~~~~~~
In file included from /mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c:11:
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/wifi_manager.h:6:64: error: unknown type name 'wifi_auth_mode_t'
    6 | void wifi_manager_init(const char *ssid, const char *password, wifi_auth_mode_t authmode);
      |                                                                ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:105: esp-idf/main/CMakeFiles/__idf_main.dir/wifi_manager.c.obj] Erro 1
make[2]: ** Esperando que outros processos terminem.
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c: In function 'app_main':
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/main.c:52:5: error: implicit declaration of function 'wifi_manager_init' [-Wimplicit-function-declaration]
   52 |     wifi_manager_init(WIFI_SSID, WIFI_PASS, WIFI_AUTH_OPEN);
      |     ^~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:91: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Erro 1
make[1]: *** [CMakeFiles/Makefile2:5944: esp-idf/main/CMakeFiles/__idf_main.dir/all] Erro 2
make[1]: ** Esperando que outros processos terminem.
make: *** [Makefile:136: all] Erro 2
